@@ -49,6 +49,7 @@ Emulator:
   - Fix: WinUAE CPU core (FPU) memory state restore
   - Fix: chrash with VDI extended resolution emulation when
          C: isn't GEMDOS HD emulated drive
+  - Fix: invalid defaults for real joysticks
   - Fix: compilation when zlib is missing
   - Fix: bugs from Debian bug tracker:
 	 https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=716536
